# path_semantics

./: Cargo.toml  README.md  ai-sequences.md  faq.md  roadmap.md  semiotic-introduction.md  sequences.md  workflow.md
assets/: bool.txt  nat.txt  option.txt  self-syntax.txt  string.txt  syntax.txt  test.txt  the-simpsons.txt
examples/: self_syntax.rs
flowcharts/: how-logical-systems-are-made.md  the-basic-problem-of-ethics.md  the-ladder-of-thinking.md
papers-wip/: about-publishing-path-semantics.odt  abrupt-change-in-complex-systems-by-small-changes-in-micro-behavior.odt  absoid-functions.odt  absolute-oddness.odt  absolute-truth-in-the-subjective-multi-verse-of-zen-rational-minds.odt  abstract-assertions.odt  abstract-idempotent-functions.odt  abstract-implication-theorem.odt  abstract-sub-types.odt  abstract-transport-xor-trick.odt  adjective-sub-types.odt  adjoint-commutative-symmetry.odt  adjoint-paths-in-boolean-algebra.odt  adjoint-paths.odt  adjoint-trivial-paths.odt  adversarial-discrete-topology.odt  adversarial-path-of-cartesian-product.odt  adversarial-path-of-fuel-distance.odt  adversarial-path-of-list.odt  adversarial-paths.odt  adverserial-paths.odt  agent-discrete-decision-space.odt  algebra-of-proofs.odt  algebraic-notation-for-asymmetric-paths.odt  algebraic-properties-of-addition.odt  algebraic-sized-type-constructors.odt  all-single-qubits-are-constructible.odt  alpha-theorem-proving.odt  alphabetic-list-of-existential-paths.odt  alphabetic-list-of-functions.odt  alphabetic-list-of-paths.odt  ambiguous-probability-of-random-string-optimization.odt  (+481 more)
(+213 files in other folders)
