[package]

name = "piston-math_notation"
version = "0.1.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["meta", "rules", "mathematics", "notation", "piston"]
description = "Bootstrapped meta rules for mathematical notation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/math_notation.git"
homepage = "https://github.com/pistondevelopers/math_notation"

[lib]
name = "math_notation"

[dependencies]
piston_meta = "0.6.5"
range = "0.1.1"
