[package]
authors = ["bvssvni <bvssvni@gmail.com>"]
description = "Bootstrapped meta rules for mathematical notation"
homepage = "https://github.com/pistondevelopers/math_notation"
keywords = ["meta", "rules", "mathematics", "notation", "piston"]
license = "MIT"
name = "piston-math_notation"
readme = "README.md"
repository = "https://github.com/pistondevelopers/math_notation.git"
version = "0.1.0"

[dependencies]
piston_meta = "0.19.0"
range = "0.3.1"

[lib]
name = "math_notation"
